# cwl-utils

./: .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  create_cwl_from_objects.py  lint-requirements.txt  load_cwl_by_path.py  mypy-requirements.txt  mypy.ini  mypy_requirements.txt  pyproject.toml  release-test.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-tests.yml  codeql-analysis.yml  tag_to_publish.yml
.travis/: mypy.docker  pep8.docker  py3.docker  py3.run
antlr4/: CwlEcmaStringLexer.g4  CwlEcmaStringParser.g4  CwlParameterReferenceLexer.g4  CwlParameterReferenceParser.g4
cwl_utils/: __meta__.py  cite-extract.py  cite_extract.py  cwl_expression_refactor.py  cwl_normalizer.py  cwl_v1_0_container_extract.py  cwl_v1_0_expression_refactor.py  cwl_v1_1_container_extract.py  cwl_v1_1_expression_refactor.py  cwl_v1_2_container_extract.py  cwl_v1_2_expression_refactor.py  cwl_v1_3_expression_refactor.py  docker-extract.py  docker_extract.py  errors.py  etools_to_clt.py  expression.py  expression_refactor.py  file_formats.py  graph_split.py  image_puller.py  inputs_schema_gen.py  loghandler.py  normalizer.py  pack.py  parser_v1_0.py  parser_v1_1.py  parser_v1_2.py  parser_v1_2_0_dev4.py  sandbox.py  sandboxjs.py  schemadef.py  singularity.py  types.py  utils.py
cwl_utils/parser/: __init__.py  cwl_v1_0.py  cwl_v1_0_utils.py  cwl_v1_1.py  cwl_v1_1_utils.py  cwl_v1_2.py  cwl_v1_2_utils.py  cwl_v1_3.py  cwl_v1_3_utils.py  latest.py  parser_v1_1.py  parser_v1_2.py  utils.py  v1_2EcmaStringLexer.py  v1_2EcmaStringParser.py  v1_2EcmaStringParserListener.py  v1_2ParameterReferenceLexer.py  v1_2ParameterReferenceParser.py  v1_2ParameterReferenceParserListener.py  v1_2expr.py
cwl_utils/templates/: WorkflowInputJsonSchemaTemplate.md
cwl_utils/testdata/: EDAM_subset.owl  cond-single-source-wf-003.1.v1_3.cwl  cond-wf-003.1.v1_3.cwl  map-ordering-v1_3.cwl  record-output-wf_v1_3.cwl  revsort-run-1-packed.cwl  single-var-loop_v1_3.cwl  stdout-wf_v1_3.cwl  wc3-tool_v1_3.cwl
cwl_utils/testdata/checker_wf/: no-warning-wf.cwl  warning-wf.cwl  warning-wf3.cwl
cwl_utils/tests/: load_cwl_by_path.py  test_docker_extract.py  test_etools_to_clt.py  test_examples.py  test_format.py  test_graph_split.py  test_inputs_schema_gen.py  test_parser.py  test_parser_utils.py  test_subscope.py  util.py
docker_cache_pull/: CommonWorkflowLanguage.py  cite-extract.py  requirements.txt
docs/: conf.py  contents.rst  cwl_v1_0.rst  cwl_v1_1.rst  cwl_v1_2_0_dev4.rst  index.rst  requirements.txt
mypy-stubs/cwlformat/: formatter.pyi
mypy-stubs/rdflib/: compare.pyi  graph.pyi  resource.pyi
src/cwl_utils/: __meta__.py  cwl_v1_1_expression_refactor.py  cwl_v1_2_expression_refactor.py  expression.py  image_puller.py  normalizer.py  pack.py  pack_cli.py  sandboxjs.py  schemadef.py  types.py
src/cwl_utils/parser/: __init__.py  cwl_v1_0.py  cwl_v1_0_utils.py  cwl_v1_1.py  cwl_v1_1_utils.py  cwl_v1_2.py  cwl_v1_2_utils.py  utils.py
src/cwl_utils/testdata/checker_wf/: warning-wf2.cwl
src/cwl_utils/tests/: test_cite_extract.py  test_examples.py  test_format.py  test_normalizer.py  test_pack_cli.py  test_parser.py  test_parser_utils.py  test_subscope.py
testdata/: all-output-loop_v1_3.cwl  cond-single-source-wf-003.1.cwl  cond-single-source-wf-003.1.v1_2.cwl  cond-single-source-wf-004.1.cwl  cond-single-source-wf-004.1.v1_2.cwl  cond-single-source-wf-004.1.v1_3.cwl  cond-single-source-wf-005.1.cwl  cond-single-source-wf-005.1.v1_2.cwl  cond-single-source-wf-005.1.v1_3.cwl  cond-wf-003.1.cwl  cond-wf-004.1.cwl  cond-wf-004.1.v1_3.cwl  cond-wf-005.1.cwl  cond-wf-005.1.v1_3.cwl  count-lines6-single-source-wf_v10.cwl  count-lines6-single-source-wf_v11.cwl  count-lines6-single-source-wf_v12.cwl  count-lines6-single-source-wf_v1_3.cwl  count-lines6-wf_v10.cwl  count-lines6-wf_v11.cwl  count-lines6-wf_v12.cwl  count-lines6-wf_v1_3.cwl  count-lines7-single-source-wf_v10.cwl  count-lines7-single-source-wf_v11.cwl  count-lines7-single-source-wf_v12.cwl  count-lines7-single-source-wf_v1_3.cwl  count-lines7-wf_v10.cwl  count-lines7-wf_v11.cwl  count-lines7-wf_v12.cwl  count-lines7-wf_v1_3.cwl  dir.cwl  dockstore-tool-md5sum.cwl  dockstore-tool-md5sum_v11.cwl  dockstore-tool-md5sum_v12.cwl  echo-tool-packed.cwl  echo-tool.cwl  echo_v1_3.cwl  foo-array.cwl  foo-array.v1_3.cwl  formattest2.cwl  (+32 more)
testdata/remote-cwl/: tool1.cwl  tool2.cwl  wf1-input.yaml  wf1-packed.cwl  wf1.cwl
testdata/workflows/: link-to-clt1.cwl  wc-tool.cwl  wf5.cwl
tests/: jschema_validate.py  load_cwl_by_path.py  test_checker.py  test_cite_extract.py  test_docker_extract.py  test_etools_to_clt.py  test_examples.py  test_extensions.py  test_format.py  test_graph_split.py  test_inputs_schema_gen.py  test_js_sandbox.py  test_meta.py  test_packing.py  test_parser.py  test_parser_utils.py  test_resreq_minmax.py  test_subscope.py  util.py
typeshed/cwlformat/: formatter.pyi
