[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cwl-utils"
authors = [{name = "Common Workflow Language project contributors", email = "common-workflow-language@googlegroups.com"}]
license = {text = "Apache 2.0"}
keywords = ["cwl", "commonwl", "common-workflow-language", "sciworkflows"]
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
requires-python = ">=3.10,<3.15"
dynamic = ["version"]
dependencies = [
    "cwl-upgrader >= 1.2.3",
    "packaging",
    "rdflib",
    "requests",
    "schema-salad >= 8.8.20250205075315,<9",
    "ruamel.yaml >= 0.17.6, < 0.20",
    "typing_extensions >= 4.10.0",
]

[project.urls]
Documentation = "https://cwl-utils.readthedocs.io/"
Homepage = "https://www.commonwl.org"
Repository = "https://github.com/common-workflow-language/cwl-utils"
Issues = "https://github.com/common-workflow-language/cwl-utils/issues"
Changelog = "https://github.com/common-workflow-language/cwl-utils/releases"
"Related Tools" = "https://www.commonwl.org/tools/"

[project.optional-dependencies]
pretty = ["cwlformat"]
testing = [
    "pytest<10",
    "pytest-cov",
    "pytest-xdist[psutil]",
    "cwl-utils[pretty]",
    "pytest-mock >= 1.10.0",
    "jsonschema >= 4.21.1",
    "udocker",
    "cwltool",
]

[project.scripts]
cwl-cite-extract = "cwl_utils.cite_extract:main"
cwl-docker-extract = "cwl_utils.docker_extract:main"
cwl-expression-refactor = "cwl_utils.expression_refactor:main"
cwl-graph-split = "cwl_utils.graph_split:main"
cwl-normalizer = "cwl_utils.normalizer:main"
cwl-inputs-schema-gen = "cwl_utils.inputs_schema_gen:main"

[tool.pytest.ini_options]
testpaths = ["cwl_utils/tests"]
addopts = "-rsx -n auto"

[tool.hatch.version]
path = "cwl_utils/__meta__.py"

[tool.hatch.build.targets.sdist]
only-include = [
    ".flake8",
    ".coveragerc",
    "create_cwl_from_objects.py",
    "CONTRIBUTING.md",
    "cwl_utils",
    "docs",
    "LICENSE",
    "lint-requirements.txt",
    "load_cwl_by_path.py",
    "Makefile",
    "mypy.ini",
    "mypy-requirements.txt",
    "mypy-stubs",
    "README.rst",
    "tox.ini"
]

[tool.hatch.build.targets.wheel]
only-include = [
    "cwl_utils",
    "LICENSE",
    "README.rst"
]

[tool.hatch.build.targets.wheel.hooks.mypyc]
enable-by-default = false
dependencies = [
    "hatch-mypyc>=0.16.0",
    "mypy==1.19.0",
    "types-requests",
    "types-jsonschema",
    "types-setuptools>=57.4.0",
]
require-runtime-dependencies = true
include = [
    "/cwl_utils/parser",
    "/cwl_utils/expression.py"
]

[tool.hatch.envs.test]
features = ["testing"]

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = [
  "D",   # pydocstyle
]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D203",
  "D212",
]

[tool.bandit]
exclude_dirs = ["cwl_utils/tests"]
