[aliases]
test = pytest

[metadata]
name = cwl-utils
version = attr: cwl_utils.__meta__.__version__
author = Common workflow language working group
author_email = common-workflow-language@googlegroups.com
license = Apache 2.0
url = https://github.com/common-workflow-language/cwl-utils
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed

[tool:pytest]
testpaths = tests

[options]
package_dir =
    cwl_utils.parser = cwl_utils/parser
    cwl_utils.tests = tests
    cwl_utils.testdata = testdata
packages =
    cwl_utils
    cwl_utils.parser
    cwl_utils.tests
    cwl_utils.testdata
install_requires = file: requirements.txt
include_package_data = True
python_requires = >=3.8
test_suite = tests
tests_require =
	pytest<8
	pytest-mock

[options.entry_points]
console_scripts =
    cwl-cite-extract=cwl_utils.cite_extract:main
    cwl-docker-extract=cwl_utils.docker_extract:main
    cwl-expression-refactor=cwl_utils.expression_refactor:main
    cwl-graph-split=cwl_utils.graph_split:main
    cwl-normalizer=cwl_utils.normalizer:main

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[options.extras_require]
pretty = cwlformat
